--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "angularx-social-login": "^4.0.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "daisyui": "^2.17.0",
     "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
@@ -53,12 +54,15 @@
     "@types/jasmine": "~3.10.0",
     "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
+    "autoprefixer": "^10.4.7",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4",
     "typescript": "~4.5.2"
   }
 }
