--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap-icons": "1.8.1",
     "file-saver": "2.0.5",
     "jquery": "3.6.0",
+    "laravel-echo": "^1.14.0",
     "moment": "2.29.1",
     "ng-angular-popup": "0.1.2",
     "ng-zorro-antd": "13.2.2",
